<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ecg"
            android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/connected_device_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        tools:text="E5:92:291:30:21"/>

    <TextView
        android:id="@+id/connected_device_swVersion_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        tools:text="0.10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/subscribe"/>

    </LinearLayout>

    <TextView
        android:id="@+id/x_axis_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/x"
        android:textSize="16sp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/ecg_lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
